# haptic_interface_ROS2

./: .gitignore  README.md  Readme.md  entrypoint.sh  haptic_control.sh  sim_haptic_control.sh  start_RaptorAPIWrapper.sh  start_TestAdmittance.sh  start_TestCalibration.sh  start_TestImpedance.sh  start_full_env.sh  tcp_endpoint.sh  tmp
.github/workflows/: main.yml
src/haptic_control/: CMakeLists.txt  package.xml  parameters.yaml
src/haptic_control/config/: haptic_parameters.yaml  kuka_parameters.yaml  parameters.yaml  ur3e_parameters.yaml  vf.rviz
src/haptic_control/include/: haptic_control.hpp  haptic_control_base.hpp  keyboard_teleoperation.hpp  sample_teleoperation.hpp  system_interface.hpp  utils.hpp  vf_test.hpp  virtual_fixture.hpp  virtual_fixture_control.hpp
src/haptic_control/include/conic_cbf/: conic_cbf.hpp
src/haptic_control/include/mesh_virtual_fixtures/: closest_on_triangle.hpp  mesh.hpp  mesh_vf_computation.hpp  vf_computation.hpp  vf_enforcer.hpp  visualization.hpp
src/haptic_control/include/utils/: circular_buffer.hpp  colors.hpp  conversions.hpp  geometry.hpp  visualization.hpp
src/haptic_control/launch/: auto_calibration.launch.py  haptic_control.launch.py  keyboard_teleoperation.launch.py  sample_teleoperation.launch.py  sim_haptic_control.launch.py  test_vf.launch.py  vf.launch.py
src/haptic_control/rviz/: rviz.rviz  vf.rviz
src/haptic_control/src/: haptic_control.cpp  haptic_control_base.cpp  main_haptic_control.cpp  main_vf_control.cpp  main_vf_test.cpp  mesh_test.cpp  sample_teleoperation.cpp  vf_test.cpp  virtual_fixture.cpp  virtual_fixture_control.cpp
src/haptic_control/test/: keyboard_teleoperation.cpp  vf_test.cpp
src/haption_raptor_api/: CMakeLists.txt
src/haption_raptor_api/Dependencies/RaptorAPI/Samples/: SimpleChannelUDP.cpp  TestBlockedMode.cpp  TestCalibration.cpp  TestCalibration_TwoDevices.cpp  TestImpedance.cpp  TestJointAngles_TwoDevices.cpp
src/haption_raptor_api/Dependencies/RaptorAPI/doc/html/: class_h_a_p_t_i_o_n_1_1_raptor_a_p_i.html  class_h_a_p_t_i_o_n_1_1_simple_channel_1_1_simple_channel_interface.html  group___test_blocked_mode.html  group___test_calibration.html  group___test_impedance.html  group___test_joint_angles.html  group___test_joint_blocked_mode.html  group___test_joint_impedance.html  group___test_two_devices.html  index.html
src/haption_raptor_api/Dependencies/RaptorAPI/include/: RaptorAPI.hpp  SimpleChannelInterface.hpp
src/haption_raptor_api/Dependencies/RaptorAPI/include/Linux/glibc-2.31/: RaptorAPI_Export.h
src/haption_raptor_api/Dependencies/RaptorAPI/include/Windows/v143/: RaptorAPI_Export.h
src/haption_raptor_api/src/: raptor_api_wrapper.cpp
src/raptor_api_interfaces/: package.xml
src/test_admittance/: CMakeLists.txt
src/test_admittance/config/: parameters.yaml
src/test_admittance/src/: test_admittance.cpp
src/test_calibration/: CMakeLists.txt
src/test_calibration/config/: parameters.yaml
src/test_calibration/src/: test_calibration.cpp
src/test_impedance/: CMakeLists.txt  parameters.yaml
src/test_impedance/src/: test_impedance.cpp
src/vf_control/: CMakeLists.txt  package.xml
src/vf_control/config/: parameters.yaml  vf.rviz
src/vf_control/include/: closest_on_triangle.hpp  haptic_control_base.hpp  location.hpp  mesh.hpp  qp_wrapper.hpp  system_interface.cpp  system_interface.hpp  utils.hpp  vf_computation.hpp  vf_control.hpp  vf_enforcer.hpp  visualization.hpp
src/vf_control/include/vf/: closest_on_triangle.hpp  location.hpp  vf_computation.hpp  vf_enforcer.hpp
src/vf_control/launch/: test_vf.launch.py  vf.launch.py  vf_control_full.launch.py
src/vf_control/src/: haptic_control_base.cpp  mesh_test.cpp  vf_control.cpp  vf_control_keyboard.cpp  vf_control_test.cpp  vf_enforcer.cpp
src/vf_control/test/: vf_test.cpp
